--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Foodanic</a>
+          <a class="navbar-brand" href="{% url 'home' %}">SBMK COFFEE BAR</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
